src/pages/Buy/components/TokenList/styles.module.scss
@import '/src/styles/variables';
@import '/src/styles/mixins';

.card {
  &Title {
    text-transform: uppercase;
    margin-bottom: 24px;
  }

  .currencyListItem {
    display: flex;
    align-items: center;
    padding-bottom: 16px;
    margin-bottom: 16px;
    border-bottom: 1px solid black;

    .currencyListItemImage {
      margin-right: 16px;
    }

    .currencyListItemPrice {
      margin-left: auto;
    }

    &:last-of-type {
      border-bottom: none;
    }
  }
}

@include large-tablet {
  .card {
    .cardTitle {
      white-space: nowrap;
      font-size: 16px;
      text-align: center;
    }
  }
}

